--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -18,14 +18,14 @@
   <ion-grid style="width: 75%">
     <ion-row class="rowStyle">
         <ion-icon name="mail" color="dark"></ion-icon>
-      <ion-input type="email" placeholder="your email"></ion-input>
+      <ion-input type="email" placeholder="your email" [(ngModel)]="email"></ion-input>
     </ion-row>
     <ion-row class="rowStyle">
         <ion-icon name="key" color="dark"></ion-icon>
-        <ion-input type="password" placeholder="your email"></ion-input>
+        <ion-input type="password" placeholder="your password" [(ngModel)]="password"></ion-input>
     </ion-row>
     <ion-row>
-      <button ion-button block round outline color="light" style="margin-top: 20px;">Login</button>
+      <button ion-button block round outline color="light" style="margin-top: 20px;" (click)="login();">Login</button>
     </ion-row>
   </ion-grid>
   <button ion-button block clear color="light" (click)="gotoSignup();">Don't have an account? Sign Up</button>  
