--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -25,6 +25,12 @@
     </button>    
   </ion-row>
 
+  <ion-refresher (ionRefresh)="refresh($event)">
+    <ion-refresher-content>
+
+    </ion-refresher-content>
+  </ion-refresher>
+
   <ion-card *ngFor="let post of posts">
     <ion-item-divider color="danger">
       {{ post.data().owner_name }} Says
