latest updates to include photo functionality with devices camera.

--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -14,7 +14,7 @@
 
 <ion-content>
   <ion-row margin class="rowStyle">
-    <button ion-button icon-only clear color="danger">
+    <button ion-button icon-only clear color="danger" (click)="addPhoto();">
       <ion-icon name="images"></ion-icon>
     </button>
 
