added Firebase function to update Likes Count.

--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -50,9 +50,9 @@
 
     <ion-row class="bottom-bar">
       <ion-col>
-        <button ion-button block icon-left clear small color="danger" class="border-right">
+        <button ion-button block icon-left clear small color="danger" class="border-right" (click)="like(post)">
           <ion-icon name="thumbs-up"></ion-icon>
-          <small>12 Likes</small>
+          <small>{{ post.data().likesCount || 0 }} Likes</small>
         </button>
       </ion-col>
       <ion-col>
