added comments functionality to posts and updateCommentsCount firestore function.

--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -56,9 +56,9 @@
         </button>
       </ion-col>
       <ion-col>
-        <button ion-button block icon-left clear small color="danger" class="border-right">
+        <button ion-button block icon-left clear small color="danger" class="border-right" (click)="comment(post)">
           <ion-icon name="text"></ion-icon>
-          <small>12 Comments</small>
+          <small>{{ post.data().commentsCount || 0 }} Comments</small>
         </button>
       </ion-col>      
       <ion-col>
