--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -31,7 +31,7 @@
 
       <ion-item class="rowStyle">
         <ion-icon name="contact" color="dark"></ion-icon>
-        <ion-datetime displayFormat="MMM DD, YYYY HH:mm" [(ngModel)]="myDate"></ion-datetime>
+        <ion-datetime displayFormat="MMM DD, YYYY HH:mm" placeholder="your birthday" [(ngModel)]="birthday"></ion-datetime>
       </ion-item>
 
       <ion-row>
